Create Auth Layout and Social Auth Form

--- a/app/globals.css
+++ b/app/globals.css
@@ -165,4 +165,10 @@
   .flex-start {
     @apply flex items-center justify-start;
   }
+  .invert-colors {
+    @apply invert dark:invert-0;
+  }
+  .auth-button {
+    @apply background-dark400_light900  body-medium text-dark200_light800 min-h-12 flex-1 rounded-2 px-4 py-3;
+  }
 }
